# LinCAD

./: .gitignore  CMakeLists.txt
src/: context.cpp  context.h  rational.h
test/: test_context.cpp  test_sat.cpp
